--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Miles Burton <miles@mnetcs.com>, Tim Newsome <nuisance@casualhacker.net>,
 maintainer=Miles Burton <miles@mnetcs.com>
 sentence=Arduino Library for Dallas Temperature ICs
 paragraph=Supports DS18B20, DS18S20, DS1822, DS1820
-category=Sensor
+category=Sensors
 url=https://github.com/milesburton/Arduino-Temperature-Control-Library
 architectures=*
