Specify library dependencies in library.properties
Specifying the library dependencies in the depends field of library.properties causes the Arduino Library Manager (Arduino IDE 1.8.10 and newer) to offer to install any missing dependencies during installation of this library. "arduino-cli lib install" will automatically install the dependencies (arduino-cli 0.7.0 and newer).

--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Supports DS18B20, DS18S20, DS1822, DS1820
 category=Sensors
 url=https://github.com/milesburton/Arduino-Temperature-Control-Library
 architectures=*
+depends=OneWire
