--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -2,9 +2,13 @@ compile:
   # Choosing to run compilation tests on 2 different Arduino platforms
   platforms:
     - uno
-    - leonardo
-    - due
+    # - due
     - zero
+    # - leonardo
+    - m4
+    - esp32
+    - esp8266
+    # - mega2560
 unittest:
   # These dependent libraries will be installed
   libraries:
