fix build - CRC16 bug

--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -2,10 +2,10 @@ compile:
   # Choosing to run compilation tests on 2 different Arduino platforms
   platforms:
     - uno
-    # - due
-    # - zero
-    # - leonardo
-    # - m4
+    - due
+    - zero
+    - leonardo
+    - m4
     # - esp32        # errors on OneWire =>  util/crc16.h  vs  rom/crc.h
     - esp8266
     - mega2560
@@ -13,4 +13,3 @@ unittest:
   # These dependent libraries will be installed
   libraries:
     - "OneWire"
-    - "util/crc16"
