--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -1,15 +1,19 @@
 compile:
-  # Choosing to run compilation tests on 2 different Arduino platforms
+  # Compile tests on multiple Arduino platforms
   platforms:
-    - uno
-    - due
-    # - zero         # SAMD covered by M4
-    # - leonardo     # AVR covered by UNO
-    - m4
-    # - esp32        # errors on OneWire =>  util/crc16.h  vs  rom/crc.h
-    - esp8266
-    # - mega2560     # AVR covered by UNO
+    - uno          # Standard AVR platform
+    - due          # SAM platform
+    - m4           # SAMD platform (Adafruit Feather M4 or similar)
+    - esp8266      # ESP8266 platform for Wi-Fi boards
+    # Add additional platforms if needed, like STM32 or ESP32
+    # - mega2560    # If needed for expanded AVR testing
+    # - stm32:disco_f407vg # Example STM32 board, adjust for your target board
+
 unittest:
-  # These dependent libraries will be installed
+  # Unit test platforms and dependencies
+  platforms:
+    - host          # Native host system (Linux in this case)
   libraries:
-    - "OneWire"
+    - "OneWire"     # Ensure OneWire library is available for testing
+
+# Additional configuration can go here if needed
