fix: Resolved merge conflicts - take one million

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=DallasTemperature
 version=4.0.1
-author=Miles Burton <miles@thinkbroadband.com>
-maintainer=Miles Burton <miles@thinkbroadband.com>
+author=Miles Burton <mail@milesburton.com>
+maintainer=Miles Burton <mail@milesburton.com>
 sentence=Arduino library for Dallas/Maxim temperature ICs
 paragraph=Support for DS18B20 and other Dallas/Maxim 1-Wire temperature sensors
 category=Sensors
