fix: Resolved merge conflicts - take one million

--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -12,7 +12,7 @@ compile:
 unittest:
   # Unit test platforms and dependencies
   platforms:
-    - host          # Native host system (Linux in this case)
+    - uno          # Native host system (Linux in this case)
   libraries:
     - "OneWire"     # Ensure OneWire library is available for testing
 
