--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=DallasTemperature
 version=4.0.1
-author=Miles Burton <mail@milesburton.com>
+author=Miles Burton <mail@milesburton.com>, Tim Newsome <nuisance@casualhacker.net>, Guil Barros <gfbarros@bappos.com>, Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Miles Burton <mail@milesburton.com>
 sentence=Arduino library for Dallas/Maxim temperature ICs
 paragraph=Support for DS18B20 and other Dallas/Maxim 1-Wire temperature sensors
