--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -2,14 +2,15 @@ compile:
   # Choosing to run compilation tests on 2 different Arduino platforms
   platforms:
     - uno
-    - due
+    # - due
     # - zero         # SAMD covered by M4
     # - leonardo     # AVR covered by UNO
-    - m4
+    # - m4
     # - esp32        # errors on OneWire =>  util/crc16.h  vs  rom/crc.h
-    - esp8266
+    # - esp8266
     # - mega2560     # AVR covered by UNO
 unittest:
   # These dependent libraries will be installed
   libraries:
+    - "libc"
     - "OneWire"
