fix: Testing installing OneWire

--- a/.github/workflows/arduino_test_runner.yml
+++ b/.github/workflows/arduino_test_runner.yml
@@ -22,23 +22,28 @@ jobs:
         run: |
           curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sudo sh
 
-      # Step 3: Set up Ruby
+      # Step 3: Add Arduino CLI to PATH
+      - name: Add Arduino CLI to PATH
+        run: |
+          echo "/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin" >> $GITHUB_PATH
+
+      # Step 4: Set up Ruby
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6
 
-      # Step 4: Install Arduino CI gem
+      # Step 5: Install Arduino CI gem
       - name: Install Arduino CI
         run: |
           gem install arduino_ci -v 1.5.0
 
-      # Step 5: Install OneWire Library
+      # Step 6: Install OneWire Library
       - name: Install OneWire Library
         run: |
           arduino-cli lib install "OneWire"
 
-      # Step 6: Run Arduino CI tests
+      # Step 7: Run Arduino CI tests
       - name: Run Arduino CI Tests
         run: |
           arduino_ci.rb
