--- a/.github/workflows/arduino_test_runner.yml
+++ b/.github/workflows/arduino_test_runner.yml
@@ -15,29 +15,33 @@ jobs:
           curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sudo sh
           export PATH=$PATH:/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin
           echo "Arduino CLI version:"
-          arduino-cli version  # Check the version to confirm installation
+          /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin/arduino-cli version  # Check the version to confirm installation
 
-      # Step 3: Install necessary cores
+      # Step 3: Verify Arduino CLI installation
+      - name: Verify Arduino CLI installation
+        run: |
+          echo "Listing files in bin directory:"
+          ls -l /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin  # Check if arduino-cli is available
+
+      # Step 4: Install necessary cores
       - name: Install Arduino cores
         run: |
-          export PATH=$PATH:/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin  # Ensure it's in the PATH
-          arduino-cli core update-index
-          arduino-cli core install arduino:avr
-          arduino-cli core install arduino:sam
+          /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin/arduino-cli core update-index
+          /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin/arduino-cli core install arduino:avr
+          /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin/arduino-cli core install arduino:sam
+          /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin/arduino-cli core install esp8266:esp8266  # Add esp8266 core
 
       # Debugging Step 1: Check installed cores
       - name: List installed cores
         run: |
-          export PATH=$PATH:/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin  # Ensure it's in the PATH
-          arduino-cli core list
+          /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin/arduino-cli core list
 
-      # Debugging Step 2: Check OneWire library
+      # Debugging Step 2: Check OneWire library installation
       - name: Check OneWire library installation
         run: |
-          export PATH=$PATH:/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin  # Ensure it's in the PATH
-          arduino-cli lib list | grep OneWire
+          /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin/arduino-cli lib list | grep OneWire
 
-      # Step 4: Install Ruby and Arduino CI
+      # Step 5: Install Ruby and Arduino CI
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -47,14 +51,13 @@ jobs:
         run: |
           gem install arduino_ci -v 1.5.0
 
-      # Step 5: Run Arduino CI Tests
+      # Step 6: Run Arduino CI Tests
       - name: Run Arduino CI Tests
         run: |
-          export PATH=$PATH:/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin  # Ensure it's in the PATH
-          arduino_ci.rb
+          /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/bin/arduino_ci.rb
 
       # Debugging Step 3: Check the working directory and Arduino config
       - name: Check working directory and Arduino config
         run: |
           echo "Working directory: $(pwd)"
-          cat .arduino-ci.yml
+          cat .arduino-ci.yml  # Ensure the configuration file is correct
