--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -1,29 +1,16 @@
 compile:
+  # Compile tests on multiple Arduino platforms
   platforms:
-    - uno
-    - due
-    - m4
+    - uno          # Standard AVR platform
+    - due          # SAM platform
+    - m4           # SAMD platform (Adafruit Feather M4 or similar)
+    # Add additional platforms if needed, like STM32 or ESP32
+    # - mega2560    # If needed for expanded AVR testing
+    # - stm32:disco_f407vg # Example STM32 board, adjust for your target board
 
 unittest:
+  # Unit test platforms and dependencies
   platforms:
-    - uno
+    - uno          # Native host system (Linux in this case)
   libraries:
-    - "OneWire"
-
-packages:
-  libraries:
-    - source-path: .
-      platforms:
-        - uno
-        - due
-        - m4
-    - name: OneWire
-
-directories:
-  tests: test
-
-aux_libraries:
-  - OneWire
-
-dependencies:
-  arduino-ci: "~>1.5.0"
+    - "OneWire"     # Ensure OneWire library is available for testing
