fix: Debugging - you know again

--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -1,24 +1,19 @@
 compile:
   platforms:
     - uno
-
 unittest:
   platforms:
     - uno
   libraries:
     - "OneWire"
-
 aux_libraries_for_ci:
   - OneWire
-
 aux_libraries_for_unittest:
   - OneWire
-
 configuration:
   architecture: "avr"
   board: "uno"
-  
 directories:
-  lib_dir: "/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/libraries"
-  arduino_dir: "/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library"
-  arduino_libraries_dir: "/home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/libraries"
+  lib_dir: "$GITHUB_WORKSPACE/libraries"
+  arduino_dir: "$GITHUB_WORKSPACE"
+  arduino_libraries_dir: "$GITHUB_WORKSPACE/libraries"
