--- a/arduino-cli.yaml
+++ b/arduino-cli.yaml
@@ -1,13 +1,11 @@
 board_manager:
-  additional_urls:
-    - https://arduino.esp8266.com/stable/package_esp8266com_index.json
-    - https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
+  additional_urls: []
 daemon:
   port: "50051"
 directories:
-  data: /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/.arduino15
-  downloads: /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/.arduino15/staging
-  user: /home/runner/work/Arduino-Temperature-Control-Library/Arduino-Temperature-Control-Library/Arduino
+  data: $GITHUB_WORKSPACE/.arduino15
+  downloads: $GITHUB_WORKSPACE/.arduino15/staging
+  user: $GITHUB_WORKSPACE/Arduino
 library:
   enable_unsafe_install: true
 logging:
