--- a/.github/workflows/arduino_test_runner.yml
+++ b/.github/workflows/arduino_test_runner.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
+      - name: Install AVR development files
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-avr avr-libc
+      
       - name: Create required directories
         run: |
           mkdir -p $GITHUB_WORKSPACE/bin
