--- a/.github/workflows/arduino_test_runner.yml
+++ b/.github/workflows/arduino_test_runner.yml
@@ -9,10 +9,60 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Install AVR development files
+      - name: Create mock headers
         run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-avr avr-libc
+          # Create directory structure for mock headers
+          mkdir -p $GITHUB_WORKSPACE/mock/avr/util
+          
+          # Create mock crc16.h
+          cat > $GITHUB_WORKSPACE/mock/avr/util/crc16.h << 'EOF'
+          #ifndef _UTIL_CRC16_H_
+          #define _UTIL_CRC16_H_
+          
+          #include <stdint.h>
+          
+          static inline uint16_t _crc16_update(uint16_t crc, uint8_t data) {
+              return (crc << 8) | data;
+          }
+          
+          #endif
+          EOF
+          
+          # Create mock pgmspace.h
+          cat > $GITHUB_WORKSPACE/mock/avr/pgmspace.h << 'EOF'
+          #ifndef __PGMSPACE_H_
+          #define __PGMSPACE_H_
+          
+          #include <inttypes.h>
+          
+          #define PROGMEM
+          #define PGM_P  const char *
+          #define PSTR(str) (str)
+          
+          #define pgm_read_byte(addr) (*(const unsigned char *)(addr))
+          #define pgm_read_word(addr) (*(const unsigned short *)(addr))
+          #define pgm_read_dword(addr) (*(const unsigned long *)(addr))
+          #define pgm_read_float(addr) (*(const float *)(addr))
+          
+          #define strlen_P(s) strlen((const char *)(s))
+          #define strcpy_P(dest, src) strcpy((char *)(dest), (const char *)(src))
+          #define strncpy_P(dest, src, n) strncpy((char *)(dest), (const char *)(src), (n))
+          
+          #endif
+          EOF
+          
+          # Create mock inttypes.h
+          cat > $GITHUB_WORKSPACE/mock/inttypes.h << 'EOF'
+          #ifndef _INTTYPES_H
+          #define _INTTYPES_H
+          
+          #include <stdint.h>
+          
+          typedef int32_t int_farptr_t;
+          typedef uint32_t uint_farptr_t;
+          
+          #endif
+          EOF
       
       - name: Create required directories
         run: |
@@ -55,11 +105,8 @@ jobs:
         run: |
           gem install arduino_ci -v 1.6.2
       
-      - name: Create mock AVR include structure
-        run: |
-          sudo mkdir -p /usr/include/avr/util
-          sudo cp /usr/lib/avr/include/util/crc16.h /usr/include/avr/util/
-      
       - name: Run Arduino CI Tests
+        env:
+          CPLUS_INCLUDE_PATH: ${{ github.workspace }}/mock:$CPLUS_INCLUDE_PATH
         run: |
-          CPLUS_INCLUDE_PATH=/usr/lib/avr/include:$CPLUS_INCLUDE_PATH arduino_ci.rb
+          arduino_ci.rb
