fix: Temporarily ignore the unit tests entirely. We'll branch off and dig into the CI config

--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -3,5 +3,7 @@ compile:
     - uno
   libraries:
     - "OneWire"
-unittest:
-  enabled: false
+skip_examples: false
+skip_unittest: true
+platforms:
+  - uno
