fix: Temporarily ignore the unit tests entirely. We'll branch off and dig into the CI config

--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -1,9 +1,7 @@
 compile:
   platforms:
-    - uno
+    - arduino:avr:uno
   libraries:
     - "OneWire"
 skip_examples: false
 skip_unittest: true
-platforms:
-  - uno
