fix: Temporarily ignore the unit tests entirely. We'll branch off and dig into the CI config

--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -1,7 +1,9 @@
 compile:
   platforms:
-    - arduino:avr:uno
+    - uno
   libraries:
     - "OneWire"
-skip_examples: false
 skip_unittest: true
+
+aux_libraries_for_ci:
+  - "OneWire"
