--- a/.devcontainer/arduino-cli.yaml
+++ b/.devcontainer/arduino-cli.yaml
@@ -1,21 +1,15 @@
-board_manager:
-  additional_urls:
-    - https://arduino.esp8266.com/stable/package_esp8266com_index.json
-    - https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-daemon:
-  port: "50051"
-directories:
-  data: /root/.arduino15
-  downloads: /root/.arduino15/staging
-  user: /root/Arduino
-library:
-  enable_unsafe_install: true
-logging:
-  file: ""
-  format: text
-  level: info
-metrics:
-  addr: :9090
-  enabled: true
-sketch:
-  always_export_binaries: false
+compile:
+  # Choosing to run compilation tests on 2 different Arduino platforms
+  platforms:
+    - uno
+    - due
+    # - zero         # SAMD covered by M4
+    # - leonardo     # AVR covered by UNO
+    - m4
+    # - esp32        # errors on OneWire =>  util/crc16.h  vs  rom/crc.h
+    # - esp8266
+    # - mega2560     # AVR covered by UNO
+unittest:
+  # These dependent libraries will be installed
+  libraries:
+    - "OneWire"
