--- a/.github/workflows/arduino_test_runner.yml
+++ b/.github/workflows/arduino_test_runner.yml
@@ -1,17 +1,39 @@
----
 name: Arduino CI
 
 on: [push, pull_request]
 
 jobs:
-  runTest:
+  test:
     runs-on: ubuntu-latest
-
+    
     steps:
       - uses: actions/checkout@v3
-      - uses: ruby/setup-ruby@v1
+      
+      - name: Create required directories
+        run: |
+          mkdir -p $GITHUB_WORKSPACE/libraries
+          mkdir -p $GITHUB_WORKSPACE/.arduino15
+          mkdir -p $GITHUB_WORKSPACE/Arduino
+
+      - name: Setup Arduino CLI
+        uses: arduino/setup-arduino-cli@v1
+
+      - name: Configure Arduino CLI
+        run: |
+          arduino-cli config init
+          arduino-cli config set library.enable_unsafe_install true
+          arduino-cli core update-index
+          arduino-cli core install arduino:avr
+        
+      - name: Install OneWire library
+        run: |
+          arduino-cli lib install OneWire
+      
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
-      - run: |
-          gem install arduino_ci
-          arduino_ci.rb
+          ruby-version: '2.6'
+      
+      - name: Install Arduino CI
+        run: |
+          gem install arduino_ci -v 1.5.0
