--- a/.devcontainer/arduino-cli.yaml
+++ b/.devcontainer/arduino-cli.yaml
@@ -13,3 +13,7 @@ unittest:
   # These dependent libraries will be installed
   libraries:
     - "OneWire"
+board_manager:
+  additional_urls:
+    - https://arduino.esp8266.com/stable/package_esp8266com_index.json
+    - https://dl.espressif.com/dl/package_esp32_index.json
